--- a/public/index.html
+++ b/public/index.html
@@ -21,11 +21,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Search Result</title>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3fkI5cmZi2jtO5ejOB08GNoczGHHZPGA&callback" type="text/javascript">
+    </script>
   </head>
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
+    <div id="map"></div>
     <div id="root"></div>
   </body>
 </html>
